# import-guard

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
import_guard/: __init__.py  _guard.py  matchers.py  models.py  observers.py  trie.py
myproject/: __init__.py  api.py  core.py
test_proj/: __init__.py  api.py  business_logic.py
tests/: test_imports.py  test_rules.py  test_trie.py
tests/myproject/: __init__.py  core.py  logging.py  tasks.py
