[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "import_guard"
author = "Anexen"
home-page = "https://github.com/Anexen/import-guard"
description-file = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, <4"
keywords = "import,deny,guard,impguard"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
